// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BodyPortalToastContainer matches snapshot 1`] = `
<body>
  <main
    id="root"
  />
  <div
    class="toast-container"
    data-portal-slot="toast"
  >
    <div
      class="toast"
      style="--toast-success-title-color: #4e7226; --toast-success-bg: #e0edd3; --toast-neutral-title-color: #424242; --toast-neutral-bg: #f1f1f1; --toast-failure-title-color: #c22032; --toast-failure-bg: #FBE7EA; --toast-failure-icon-color: #5f6163;"
    >
      <div
        class="neutral"
      >
        <div
          class="title"
        >
          Neutral
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
    <div
      class="toast toast-dismissable"
      style="--toast-success-title-color: #4e7226; --toast-success-bg: #e0edd3; --toast-neutral-title-color: #424242; --toast-neutral-bg: #f1f1f1; --toast-failure-title-color: #c22032; --toast-failure-bg: #FBE7EA; --toast-failure-icon-color: #5f6163; animation-delay: 3500ms;"
    >
      <div
        class="failure"
      >
        <div
          class="title"
        >
          Error
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
    <div
      class="toast toast-dismissable"
      style="--toast-success-title-color: #4e7226; --toast-success-bg: #e0edd3; --toast-neutral-title-color: #424242; --toast-neutral-bg: #f1f1f1; --toast-failure-title-color: #c22032; --toast-failure-bg: #FBE7EA; --toast-failure-icon-color: #5f6163; animation-delay: 1500ms;"
    >
      <div
        class="success"
      >
        <div
          class="title"
        >
          Success
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`BodyPortalToastContainer uses inline prop 1`] = `
<body>
  <main
    id="root"
  />
  <div
    class="toast-container toast-container-inline"
    data-portal-slot="toast"
  >
    <div
      class="toast toast-inline"
      style="--toast-success-title-color: #4e7226; --toast-success-bg: #e0edd3; --toast-neutral-title-color: #424242; --toast-neutral-bg: #f1f1f1; --toast-failure-title-color: #c22032; --toast-failure-bg: #FBE7EA; --toast-failure-icon-color: #5f6163;"
    >
      <div
        class="neutral"
      >
        <div
          class="title"
        >
          Neutral
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
    <div
      class="toast toast-inline toast-dismissable"
      style="--toast-success-title-color: #4e7226; --toast-success-bg: #e0edd3; --toast-neutral-title-color: #424242; --toast-neutral-bg: #f1f1f1; --toast-failure-title-color: #c22032; --toast-failure-bg: #FBE7EA; --toast-failure-icon-color: #5f6163; animation-delay: 3500ms;"
    >
      <div
        class="failure"
      >
        <div
          class="title"
        >
          Error
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
    <div
      class="toast toast-inline toast-dismissable"
      style="--toast-success-title-color: #4e7226; --toast-success-bg: #e0edd3; --toast-neutral-title-color: #424242; --toast-neutral-bg: #f1f1f1; --toast-failure-title-color: #c22032; --toast-failure-bg: #FBE7EA; --toast-failure-icon-color: #5f6163; animation-delay: 1500ms;"
    >
      <div
        class="success"
      >
        <div
          class="title"
        >
          Success
        </div>
        <div
          class="body"
        >
          message
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ToastContainer matches snapshot 1`] = `
<body>
  <div>
    <div
      aria-live="polite"
      class="toast-container"
      style="--toast-container-z-index: 40;"
    >
      <div
        class="toast"
        style="--toast-success-title-color: #4e7226; --toast-success-bg: #e0edd3; --toast-neutral-title-color: #424242; --toast-neutral-bg: #f1f1f1; --toast-failure-title-color: #c22032; --toast-failure-bg: #FBE7EA; --toast-failure-icon-color: #5f6163;"
      >
        <div
          class="neutral"
        >
          <div
            class="title"
          >
            Neutral
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
      <div
        class="toast toast-dismissable"
        style="--toast-success-title-color: #4e7226; --toast-success-bg: #e0edd3; --toast-neutral-title-color: #424242; --toast-neutral-bg: #f1f1f1; --toast-failure-title-color: #c22032; --toast-failure-bg: #FBE7EA; --toast-failure-icon-color: #5f6163; animation-delay: 3500ms;"
      >
        <div
          class="failure"
        >
          <div
            class="title"
          >
            Error
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
      <div
        class="toast toast-dismissable"
        style="--toast-success-title-color: #4e7226; --toast-success-bg: #e0edd3; --toast-neutral-title-color: #424242; --toast-neutral-bg: #f1f1f1; --toast-failure-title-color: #c22032; --toast-failure-bg: #FBE7EA; --toast-failure-icon-color: #5f6163; animation-delay: 1500ms;"
      >
        <div
          class="success"
        >
          <div
            class="title"
          >
            Success
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ToastContainer uses inline prop 1`] = `
<body>
  <div>
    <div
      aria-live="polite"
      class="toast-container toast-container-inline"
      style="--toast-container-z-index: 40;"
    >
      <div
        class="toast toast-inline"
        style="--toast-success-title-color: #4e7226; --toast-success-bg: #e0edd3; --toast-neutral-title-color: #424242; --toast-neutral-bg: #f1f1f1; --toast-failure-title-color: #c22032; --toast-failure-bg: #FBE7EA; --toast-failure-icon-color: #5f6163;"
      >
        <div
          class="neutral"
        >
          <div
            class="title"
          >
            Neutral
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
      <div
        class="toast toast-inline toast-dismissable"
        style="--toast-success-title-color: #4e7226; --toast-success-bg: #e0edd3; --toast-neutral-title-color: #424242; --toast-neutral-bg: #f1f1f1; --toast-failure-title-color: #c22032; --toast-failure-bg: #FBE7EA; --toast-failure-icon-color: #5f6163; animation-delay: 3500ms;"
      >
        <div
          class="failure"
        >
          <div
            class="title"
          >
            Error
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
      <div
        class="toast toast-inline toast-dismissable"
        style="--toast-success-title-color: #4e7226; --toast-success-bg: #e0edd3; --toast-neutral-title-color: #424242; --toast-neutral-bg: #f1f1f1; --toast-failure-title-color: #c22032; --toast-failure-bg: #FBE7EA; --toast-failure-icon-color: #5f6163; animation-delay: 1500ms;"
      >
        <div
          class="success"
        >
          <div
            class="title"
          >
            Success
          </div>
          <div
            class="body"
          >
            message
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
